# POO---Atelier-auto-3

./: .gitignore  Angajat.cpp  Angajat.h  Atelier.cpp  Atelier.h  CMakeLists.txt  Client.cpp  Client.h  ComponentaFactory.cpp  ComponentaFactory.h  Masina.cpp  Masina.h  Mecanic.cpp  Mecanic.h  Persoana.cpp  Persoana.h  README.md  Reparatie.cpp  Reparatie.h  coverage.Angajat.cpp.html  coverage.Atelier.cpp.html  coverage.Atelier.h.html  coverage.Client.cpp.html  coverage.ComponentaFactory.cpp.html  coverage.ComponentaFactory.h.html  coverage.Masina.cpp.html  coverage.Mecanic.cpp.html  coverage.Persoana.cpp.html  coverage.Reparatie.cpp.html  coverage.Reparatie.h.html  coverage.html  coverage.main.cpp.html  main.cpp
.github/workflows/: cmake.yml
