cmake_minimum_required(VERSION 3.19)
project(POO___Atelier_auto)

set(CMAKE_CXX_STANDARD 14)

add_executable(POO___Atelier_auto
        main.cpp Atelier.cpp Atelier.h Client.cpp Client.h Reparatie.cpp Reparatie.h Angajat.cpp Angajat.h Persoana.cpp Persoana.h Mecanic.cpp Mecanic.h Masina.cpp Masina.h)
